Migration of JS and CSS to external files

--- a/index.html
+++ b/index.html
@@ -1,115 +1,28 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<head xml:lang="en-gb">
+    <meta content="text/html; charset=utf-8" http-equiv="content-type" />
     <title>Bus Stop Manager</title>
     <link type="text/css" href="./css/ui-darkness/jquery-ui-1.10.3.custom.css" rel="stylesheet" />
-	<script type="text/javascript" src="./js/jquery-1.9.1.js"></script>
-	<script type="text/javascript" src="./js/jquery-ui-1.10.3.custom.js"></script>
-    <style type="text/css">
-        #screens div { width: 5%; height: 150px; padding: 0.5em; float: left; margin: 5px; }
-        #shops div{ width: 4%; height: 80px; padding: 0.5em; float: left; margin: 5px 5px 5px 0; }
-        #shops { width: 100%; height:30em; }
-        body {
-	        font-size: 62.5%;
-	        font-family: "Trebuchet MS", "Arial", "Helvetica", "Verdana", "sans-serif";
-			background-image:url('./img/raspi_colour_r.png');
-			text-align: center;
-        }
+    <script type="text/javascript" src="./js/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="./js/jquery-ui-1.10.3.custom.js"></script>
 
-        .ui-draggable, .ui-droppable {
-	        background-position: top;
-        }
-
-		#screens div:first-child, #shops div:first-child{ margin-left: 0; }
-    </style>
-    <script type="text/javascript">
-        function Debug(msg) {
-            if ($("#output").text == "") {
-                $("#output").append(msg);
-            } else {
-                $("#output").prepend(msg + "<br />");
-            }
-        }
-
-		onerror=Debug;
-
-        $( init );
-
-		function init() {
-            // Commence doing the crazy stuffs!!
-
-			// Create screens before populating them with shop details
-			var screens = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16];
-			for ( var i=1; i<=screens.length; i++ ) {
-				$('<div>Screen ' + i + '</div>')
-					.data( 'number', screens[i] )
-					.attr('id', 'screen'+screens[i] )
-					.appendTo( '#screens')
-					.addClass("ui-widget-header")
-					.droppable( {
-						accept: '#shops div',
-						hoverClass: 'ui-state-hover'/*,
-						drop: handleShopDrop*/
-					});
-			}
-
-			var shops = {"Shop 01":["Windermere","Blue"], "Shop 02":["","Blue"], "Shop 03":["Gildford","Blue"]};
-			for (store in shops) {
-				$('<div>' + shops[store][0] + '<div>' + shops[store][1] + '</div></div>')
-					.data('number', store)
-					.attr('id',store)
-					.appendTo('#shops')
-					.addClass('ui-widget-content')
-					.draggable({
-						revert: "invalid",
-						cursor: 'move'
-					});
-
-			}
-			/*
-
-            $("#screens div div").droppable({
-                accept: "#shops div",
-                activeClass: "ui-state-hover",
-                hoverClass: "ui-state-active",
-                drop: function (event, ui) {
-                    //event.traget
-
-                    $(this).droppable("option", "accept", ui.draggable);
-                    Debug("transmit details. Display " + ui.draggable.text().toLowerCase() + " on " + $(this).parent().attr("title"));
-                },
-                out: function (event, ui) {
-                    $(this).droppable("option", "accept", "#shops div");
-                }
-
-            });
-
-            $("#shops").droppable({
-                accept: "#shops div",
-                activeClass: "ui-state-hover",
-                drop: function (event, ui) {
-                    Debug("transmit details. Remove " + ui.draggable.text().toLowerCase());
-                }
-            });
-
-            $("#shops div").draggable({
-                snap: "#screens div div",
-                snapMode: "inner",
-                revert: "invalid"
-            });
-
-			*/
-
-        };
-    </script>
+    <link type="text/css" href="./css/bus_stop_manager.css" rel="stylesheet" />
+    <script type="text/javascript" src="./js/bus_stop_manager.js"></script>
 </head>
 <body>
-    <div id="screens"> </div>
-    <div id="shops" class="ui-widget-header"></div>
-    <div style="background-color:#fff;">Debug<div id="output"></div></div>
-
-    <div style="float:right;position:absolute;bottom:1em;" id="poweredby"><a href="http://www.lighttpd.net/" target="_blank"><img src="./img/buttons/light_button.png" width="80" height="27" alt="Lighttpd" title="Site powered by the Lighttpd web server"></a></div>
-
+    <div id="contents">
+        <div id="screens">
+        </div>
+        <div id="shops">
+        </div>
+        <div id="debug" title="Debug">
+        </div>
+    </div>
+    <div id="poweredby">
+        <a href="http://www.lighttpd.net/" target="_blank">
+            <img src="./img/buttons/light_button.png" width="80" height="27" alt="Lighttpd" title="Site powered by the Lighttpd web server" /></a>
+    </div>
 </body>
 </html>
